Refactor column manager